PJS - fixed topSearchBox + loginBox text alignment

--- a/RestaurantSearch/src/main/webapp/design/css/layout.css
+++ b/RestaurantSearch/src/main/webapp/design/css/layout.css
@@ -137,6 +137,9 @@ header#topHead {
 		color:#999;
 		font-size:13px;
 		padding-right:10px;
+		padding-top:0px;
+		padding-bottom:0px;
+		
 	}
 	header#topHead .btn-group.open .dropdown-toggle {
 		-webkit-box-shadow:none;
@@ -156,6 +159,7 @@ header#topHead {
 		color:#fff;
 		padding:6px 10px;
 		font-size:13px;
+		text-align: center;
 	}
 	header#topHead  .dropdown-menu li:hover a {
 		background-color:#1B1F23;
