--- a/RestaurantSearch/src/main/webapp/design/css/realestate.css
+++ b/RestaurantSearch/src/main/webapp/design/css/realestate.css
@@ -209,7 +209,7 @@ figure.agent-figure.pull-right {
 	display:none;
 	left:30%;
 	min-width:200px;
-	width:40%;
+	width:35%;
 	top:-50px;
 	
 }
